--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="basic template for SIT 725 Prac 1">
 
-    <!--Compilted and minified CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materiliaze.min.css">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+
+            
 
 </head>
 
@@ -28,7 +31,7 @@
             </div>
         </div>
     </div>
-    <!--Compiled and minified JavaScript-->
+    <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
