--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <h1 id="heading" class="center-align">SIT 725</h1>
-            </div>
-            <div class="col s12 center-align">
-                <a class="waves-effect waves-light btn" onclick="changeText()">Change Text</a>
+        <div id="cardPanel1" class="card-panel purple darken-3">
+            <div class="row">
+                <div class="col s12">
+                    <h1 id="heading" class="center-align">SIT 725</h1>
+                </div>
+                <div class="col s12 center-align">
+                    <a id="btn1" class="waves-effect waves-light btn pulse" onclick="changeText()">Change Text</a>
+                </div>
+                <div "class col s1 left-align">
+                    <a id="btn2" class="btn disabled" onclick="changeBackground()">Change Background</a>
+                </div>
             </div>
         </div>
     </div>
